crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/042.cypher
MATCH (n) WHERE n.active = true RETURN n; MATCH (n) SET n.active = false
